--- a/aboutme.html
+++ b/aboutme.html
@@ -1,30 +1,103 @@
 <!doctype html>
 <html>
 <head>
+<script type="text/javascript" src="C:\kunaljavapro\aboutme.js"></script>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>About me</title>
 <link href="C:\kunaljavapro\aboutmecss.css"
 rel="stylesheet">
 </head>
 <body class="quote">
-<p class="col"><h1>Welcome!!i know you are here find out that "can this boy really code" </h1></p>
-<hr size="5" color="gray">
+<p ><h1 class="col">Welcome!!I know you are here to find out that<em class="can"> "can he really code?"</em> </h1></p>
 <div class="bloc">
-<p ><strong>Hey!! i am<em> Kunal patne,</em>this webpage told you about my skills:here you go--> </strong></p><br>
-<h3 align="center">RESUME</h3></br>
-<p>
-
-</div>
-
-<strong class="one"><em><big>Java basics:</big></em></strong>0
-<progress value="80"  max="100"></progress>100
+<hr size="15" color="gray">
+<h3 align="center"><ins>RESUME</h3></br>
+<p class="col">Name<strong>: </strong><a href="http://linkedin.com/in/kunal-patne-3a269b129" title="Kunal's linkedin profile" target="_blank"><b>Kunal Patne</b></a>
+</br>Contact number<strong>: </strong><b>+917999226002</b><br/>E-mail Id<strong>: </strong><b>kunalpatne5gmail.com</b></br>Check my github<strong>: </strong> <a href="https://github.com/kunalpatne5/webpage.git" target="_blank" title="Kunal's Github repositories"><b>https://github.com/kunalpatne5/webpage.git</b></a></p>
+<p><big><strong><ins>Academic Qualifiacation:</strong></big></p>
+<table id="to1">
+	<tr>
+		<th><b>Degree/Examination</b></th>
+		<th><b>Stream</b></th>
+		<th><b>School/college</b></th>
+		<th><b>Board/University</b></th>
+		<th><b>Year of passing</b></th>
+		<th><b>Percentage/CGPA</b></th>
+	</tr>
+	<tr>
+		<td><b>Bechelor of enginnering</b></td>
+		<td><b>Electrical and Electronics Engineering</b></td>
+		<td><b>Sagar Institute of Research and Technology,Bhopal</b></td>
+		<td><b>R.G.P.V, Bhopal</b></td>
+		<td><b>2017</b></td>
+		<td><b>6.92 CGPA</b></td>
+	</tr>
+	<tr>
+		<td><b>Class XII</b></td>
+		<td><b>PCM</b></td>
+		<td><b>Kendriya Vidyalaya Sarni</b></td>
+		<td><b>C.B.S.E</b></td>
+		<td><b>2013</b></td>
+		<td><b>64.2%</b></td>
+	</tr>
+	<tr>
+		<td><b>Class X</b></td>
+		<td><b>All subject</b></td>
+		<td><b>Kendriya Vidyalaya Sarni</b></td>
+		<td><b>C.B.S.E</b></td>
+		<td><b>2011</b></td>
+		<td><b>7.8 CGPA</b></td>
+	</tr>
+</table>
+<div class="pros"><big><strong><ins>Professional Skills:</strong></big>
+<pre>
+<strong class="one"><em><big>Java basics:</big></em></strong>
+0<progress value="80"  max="100"></progress>100<button class="one" onclick="generate()">Certificate</button> 
 <br/>
 </br>
-<strong class="one"><em><big>C++:</big></em></stron>0
-<progress value="80" max="100"></progress>100
+<strong class="one"><em><big>C++:</big></em></strong>
+0<progress value="80" max="100"></progress>100<button class="one" onclick="generate()">Certificate</button>
 </br>
 </br>
-<strong class="one"><em><big>HTML:</big></em></strong>0
-<progress value="60" max="100"></progress>100
+<strong class="one"><em><big>HTML:</big></em></strong>
+0<progress value="60" max="100"></progress>100<button class="one" onclick="generate()">Certificate</button>
+</br>
+</br>
+<strong class="one"><em><big>MySQL:</big></em></strong>
+0<progress value="50" max="100"></progress>100<button class="one" onclick="generate()">Certificate</button>
+</br>
+</br>
+<strong class="one"><em><big>javaScripts:</big></em></strong>
+0<progress value="40" max="100"></progress>100</b><button class="one" onclick="generate()">Certificate</button>
+</pre>
+<p><strong>Note:</strong>The certificates of above skills are yet to be attached via link</p>
+<p class="pros"><big><strong><ins>Achievment and Extra Curricular Activities:</strong></ins></big></p>
+<pre>
+<ul>
+	<li><b>Represent RGPV at national level badminton tournament.</b></li>
+	<li><b>Gold Medalist at KVS National sports meet.</b></li>
+	<li><b>participated in Biotech Olympiyad got all india 226 rank.</b></li>
+</ul>
+</pre>
+<p class="pros"><big><strong><ins>Hobbies:</strong></ins></big></p>
+<pre>
+<ul>
+	<li><b>Singing songs</b></li>
+	<li><b>playing badminton</b></li>
+</ul>
+</pre>
+</div>
+<div align="center" class="formc">Visiter of my profile please submit your details and feedback in message box below:</div>
+<pre>
+<form  align="center">
+	<input class="forms" name="name" type="text" placeholder="your name..."/></br>
+	<input class="forms" name="email" type="email" placeholder="your email..."/></br>
+	<textarea class="form" name="message" placeholder="Your Feedback will help me to improve..."></textarea></br>
+	<input class="sub"  name="submit"onclick="notconnected()" type="Submit" placeholder="send"/></br>
+</form>
+</pre>
+<p align="bottom_left">&copy; of kunal patne</p>
+
+</div>
 </body>
 </html>
